2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/main.c:
	  Enable CSE for an approx. 0.2% code size reduction.

2012-04-22 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libsdcc/gptr/eeprom{8,16}_gptrput[1234].c:
	  fix accessing EECON1.WREN

2012-04-22 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/libdev/Makefile.in:
	  build 16f72[01] only if --enable-new-pics is given, as the
	  devices are not supported in the current gputils release 0.14.1

2012-04-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/main.c: undo removed include to fix implicit declaration

2012-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Preparations for repalcing division by power of two by conditional addition and shift.
	* support/regression/tests/longlong.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-950503-1.c,
	  support/regression/tests/float_single.c:
	  Enable more tests for hc08.

2012-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: fix bugs in genRLC, genRRC, and genJumpTab; support large stack
	  offsets in rmwWithAop; optimized asmopToBool
	* src/hc08/ralloc.c: fix bug in findAssignToSym

2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Allow some use of ax.

2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc,
	  src/hc08/gen.c:
	  Remove accuse.

2012-04-19 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libc/stdio/strmmssp.c:
	  fixed use of access bank vs. BSR

	* device/lib/pic16/libsdcc/gptr/eeprom{8,16}_gptr{get,put}[1234].c,
	  device/lib/pic16/libsdcc/gptr/eeprom{8,16}_write.c:
	  implement EEPROM read/write access

	* device/lib/pic16/libsdcc/gptr/gptr{get,put}[1234].c: